--- a/docs/developer-docs/6.0.x/basic/di.mdx
+++ b/docs/developer-docs/6.0.x/basic/di.mdx
@@ -25,18 +25,18 @@ An abstraction is a type-safe token that represents an interface. Use `createAbs
 
 ```typescript
 import { createAbstraction, Result } from "webiny/api";
-import type { Book } from "~/types/index.js";
+import type { IBook } from "~/types/index.js";
 
 interface IBookRepository {
-    getById(id: string): Promise<Result<Book, RepositoryError>>;
-    save(book: Book): Promise<Result<void, RepositoryError>>;
+    getById(id: string): Promise<Result<IBook, RepositoryError>>;
+    save(book: IBook): Promise<Result<void, RepositoryError>>;
 }
 
 const BookRepository = createAbstraction<IBookRepository>("Library/BookRepository");
 
 namespace BookRepository {
     export type Interface = IBookRepository;
-    export type { Book };
+    export type Book = IBook;
 }
 
 export { BookRepository };
@@ -54,10 +54,10 @@ For more complex abstractions like use cases, you can organize additional types 
 
 ```typescript
 import { createAbstraction, Result } from "webiny/api";
-import type { Book, Author, Category } from "~/types/index.js";
+import type { IBook, IAuthor, ICategory } from "~/types/index.js";
 
 interface ICreateBookUseCase {
-    execute(input: CreateBookInput): Promise<Result<Book, CreateBookError>>;
+    execute(input: CreateBookInput): Promise<Result<IBook, CreateBookError>>;
 }
 
 interface CreateBookInput {
@@ -74,8 +74,10 @@ namespace CreateBookUseCase {
     export type Interface = ICreateBookUseCase;
     export type Input = CreateBookInput;
     export type Error = CreateBookError;
-    export type Return = Promise<Result<Book, CreateBookError>>;
-    export type { Book, Author, Category };
+    export type Return = Promise<Result<IBook, CreateBookError>>;
+    export type Book = IBook;
+    export type Author = IAuthor;
+    export type Category = ICategory;
 }
 
 export { CreateBookUseCase };
